--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 240px auto;
+    background-color: #f9fafb;
 }
 
 
@@ -65,15 +66,4 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 12px;
-}
-
-@media only screen and (max-width: 600px) {
-    .wrapper {
-        grid-template-columns: repeat(1, 1fr);
-    }
-
-    #gridArea {
-        width: 320px;
-        height: 320px;
-    }
 }
